upload a fill in git hub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- PROFILE -->
         <div class="profile-card mb-5">
             <div class="profile-img">
-                <img src="/image/sachin.jpg" alt="Sachin Deshmukh">
+                <img src="./image/sachin.jpg" alt="Sachin Deshmukh">
             </div>
             <h1 class="mt-4">Sachin Deshmukh</h1>
             <p>Trainee Software Developer</p>
